--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,16 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+	"short_name": "Findsee",
+	"name": "Find & See",
+	"icons": [
+		{
+			"src": "./eye-192x192.png",
+			"sizes": "64x64 32x32 24x24 16x16",
+			"type": "image/png"
+		}
+	],
+	"start_url": ".",
+	"display": "fullscreen",
+	"theme_color": "#000000",
+	"background_color": "#ffffff",
+	"orientation": "portrait"
 }
