--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-headroom": "^2.2.8",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.1"
   },
   "scripts": {
