--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
 		"dev": "next",
 		"start": "next start",
 		"build": "next build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"now-build": "react-scripts build"
+		"test": "react-scripts test"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
