--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
 		"react-dom": "^16.12.0",
 		"react-headroom": "^3.0.0",
 		"react-router-dom": "^5.1.2",
-		"react-scripts": "3.3.0",
 		"react-spring": "^8.0.27",
 		"styled-components": "^4.4.1"
 	},
@@ -18,8 +17,7 @@
 	"scripts": {
 		"dev": "next",
 		"start": "next start",
-		"build": "next build",
-		"test": "react-scripts test"
+		"build": "next build"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
