--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"next": "^10.0.0",
+		"framer-motion": "^3.1.1",
+		"next": "^10.0.4",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
-		"react-headroom": "^3.0.0",
+		"react-headroom": "^3.1.0",
 		"react-router-dom": "^5.1.2",
-		"react-spring": "^8.0.27",
 		"styled-components": "^5.2.1",
-		"swr": "^0.3.5"
+		"swr": "^0.3.11"
 	},
 	"devDependencies": {
 		"babel-plugin-styled-components": "^1.11.1"
