--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"date-fns": "^2.16.1",
 		"framer-motion": "^3.1.1",
 		"next": "^10.0.4",
+		"postcss-flexbugs-fixes": "^5.0.2",
+		"postcss-preset-env": "^6.7.0",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-headroom": "^3.1.0",
 		"react-router-dom": "^5.1.2",
+		"sass": "^1.32.0",
 		"styled-components": "^5.2.1",
-		"swr": "^0.3.11"
+		"swr": "^0.3.11",
+		"tailwindcss": "^2.0.2"
 	},
 	"devDependencies": {
 		"babel-plugin-styled-components": "^1.11.1"
